# django-healthdatamodel

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  test.yml
healthdatamodel/: admin.py  constants.py  ingest.py  models.py  query.py  schemas.py  testing.py
healthdatamodel/migrations/: 0001_initial.py  0002_wearableconnection.py  0003_record_customer_type_start_idx.py  0004_record_google_health_choice.py  0005_record_garmin_choice.py  0006_record_oura_choice.py  0007_record_whoop_choice.py  0008_record_strava_choice.py
tests/: test_admin.py  test_bmr.py  test_ingest.py  test_models.py  test_query.py  test_wearable_connection.py
