[project]
name = "django-healthdatamodel"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthdatamodel"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-freezer",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
