[project]
name = "django-healthdatamodel"
version = "0.3.3"
requires-python = ">=3.11"
dependencies = [
    "django",
    "pydantic>=2",
    "python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthdatamodel"]

[dependency-groups]
dev = [
    "anyio[trio]",
    "pytest",
    "pytest-asyncio",
    "pytest-django",
    "pytest-freezer",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
asyncio_mode = "auto"
